@@ -47,15 +47,33 @@
 /* Maximum events returnable in a single kevent() call */
 #define MAX_KEVENT  512
 
-#ifdef KQUEUE_DEBUG
-# define dbg_puts(str)           fprintf(stderr, "%s(): %s\n", __func__,str)
-# define dbg_printf(fmt,...)     fprintf(stderr, "%s(): "fmt"\n", __func__,__VA_ARGS__)
-# define dbg_perror(str)         fprintf(stderr, "%s(): %s: %s\n", __func__,str, strerror(errno))
-#else
+
+#ifndef NDEBUG
+
+extern int KQUEUE_DEBUG;
+
+#define dbg_puts(str)           do {                                \
+    if (KQUEUE_DEBUG)                                               \
+      fprintf(stderr, "KQ: %s(): %s\n", __func__,str);            \
+} while (0)
+
+#define dbg_printf(fmt,...)     do {                                \
+    if (KQUEUE_DEBUG)                                               \
+      fprintf(stderr, "KQ: \t%s(): "fmt"\n", __func__,__VA_ARGS__); \
+} while (0)
+
+#define dbg_perror(str)         do {                                \
+    if (KQUEUE_DEBUG)                                               \
+      fprintf(stderr, "KQ: %s(): %s: %s\n",                       \
+              __func__, str, strerror(errno));                      \
+} while (0)
+
+#else /* NDEBUG */
 # define dbg_puts(str)           ;
 # define dbg_printf(fmt,...)     ;
 # define dbg_perror(str)         ;
 #endif 
+
 
 struct kqueue;
 struct kevent;
